# lemory

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  COMPETITIVE.md  CONTRIBUTING.md  Dockerfile  GUIDE.ko.md  GUIDE.md  LICENSE  README.en.md  README.ko.md  README.md  ROUTINE.ko.md  SECURITY.md  STORAGE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml
assets/: make_gifs.py  make_gifs_en.py
benchmarks/: _remeasure_local.py  _remeasure_sc.py  _validate_local_stack.py  ablate_lme_recency.py  bench_embedder.py  bench_lancedb_vector.py  bench_scale.py  bench_smartconn.py  bench_storage_alternatives.py  common.py  embed_swap_kormapleqa.py  embed_swap_small.py  gen_korean.py  gen_kormapleqa.py  gen_maple_real_qa.py  gen_multihop.py  gen_real_qa.py  gen_robust_queries.py  gen_secondbrain.py  gen_temporal.py  harness_korean.py  namu_filter.py  namu_parser.py  namu_scraper.py  package.json  perf_local.py  prep_help.py  prep_locomo.py  prep_squad.py  render_charts.py  report.py  run_agentmemqa.py  run_beir.py  run_beir_rerank.py  run_challengers_korean.py  run_cognee.py  run_cognee_gc.py  run_compact.py  run_context_order.py  run_dmr.py  (+29 more)
benchmarks/data/agentmemqa/: generate.py  questions.jsonl
benchmarks/data/help/: questions.json
benchmarks/data/kepano/: README.md  questions.json
benchmarks/data/kormapleqa/: README.md  questions.jsonl
benchmarks/data/law/: notes.json  qa_raw.json  questions.json
benchmarks/data/law/vault/: 공인중개사법 손해배상책임.md  국세 당해세와 임차인 배당순위.md  깡통전세 판별법.md  민법 전세권.md  부동산등기부등본 확인사항.md  소액임차인 최우선변제.md  임차권등기명령.md  전세보증금 반환보증(HUG).md  전세사기 피해 신고 절차.md  전세사기피해자 특별법.md  주택임대차보호법 대항력.md  주택임대차보호법 우선변제권.md  채권자취소권(사해행위취소).md  형법 사기죄와 전세사기.md  확정일자.md
benchmarks/data/maple/: facts.json  prose.json  questions.json
benchmarks/data/maple/vault/: 검은 마법사.md  나이트로드.md  데몬어벤져.md  데미안.md  레헬른.md  루미너스.md  (+26 more)
benchmarks/data/maple_real/: README.md  questions.json
benchmarks/data/multihop/: prose.json  questions.json  robust_queries.json  world.json
benchmarks/data/rolememqa/: generate.py  generate_messy.py  questions.jsonl  questions_messy.jsonl
benchmarks/work/: results_agentmemqa.json  results_challengers_korean.json  results_cognee.json  results_cognee_gc.json  results_compact.json  results_context_order.json  results_dmr.json  results_e2e_maple_real.json  results_e2e_multihop.json  results_jsquad.json  results_kormapleqa.json  results_kormapleqa_e2e.json  results_kormapleqa_sc.json  results_korquad.json  results_korquad_full.json  results_lightrag.json  results_linkless.json  results_llamaindex.json  results_locomo.json  results_locomo_retrieval.json  results_longmemeval.json  results_longmemeval_full.json  results_mem0.json  results_mempalace.json  results_memvid_korean.json  results_perf.json  results_qmd.json  results_real_help.json  results_real_kepano.json  results_retrieval_help.json  results_retrieval_kepano.json  results_retrieval_law.json  results_retrieval_maple.json  results_retrieval_maple_real.json  results_retrieval_multihop.json  results_retrieval_squad.json  results_robustness.json  results_robustness_stages.json  results_rolememqa.json  results_rolememqa_messy.json  (+4 more)
benchmarks/work/longmemeval-full/: ablation_recency0.jsonl  rows.jsonl
clients/js/: README.md  package.json
clients/js/src/: index.ts
docs/: COMPETITIVE.md  GUIDE.ko.md  GUIDE.md  LAUNCH.md  ROUTINE.ko.md  STORAGE.md  en.html  index.html  robots.txt  sitemap.xml
docs/assets/: NanumGothicCoding-OFL.txt  make_gifs.py  make_gifs_en.py
obsidian-plugin/: .gitignore  README.md  main.js  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
scripts/: reproduce.sh
src/lemory/: __init__.py  answer.py  cli.py  config.py  engine.py  gemini.py  ingest.py  markdown.py  mcp_server.py  openai_client.py  search.py  server.py  store.py
src/lemory/ingestion/: __init__.py  chat_import.py  connectors.py  distill.py  indexer.py  markdown.py  memory.py
src/lemory/integrations/: __init__.py  langchain.py  llamaindex.py
src/lemory/interfaces/: agents.py  cli.py  graph_html.py  hooks.py  http.py  mcp.py  skills.py  webui.py
src/lemory/providers/: __init__.py  base.py  gemini.py  gemma.py  litert.py  llamacpp.py  local.py  ollama.py  openai.py  reranker.py  supertonic_tts.py  whisper_stt.py
src/lemory/retrieval/: __init__.py  answer.py  compact.py  conflicts.py  curriculum.py  drift.py  intent.py  links.py  search.py  temporal.py
src/lemory/storage/: __init__.py  ann.py  sqlite_store.py
tests/: conftest.py  test_agents_onboarding.py  test_ann.py  test_compact_context.py  test_config.py  test_connectors.py  test_curriculum.py  test_distill.py  test_engine.py  test_events.py  test_fuzz.py  test_gemini.py  test_gemma_fit.py  test_gemma_resolve.py  test_hooks.py  test_import_attach.py  test_informativeness.py  test_ingest_edge.py  test_intent.py  test_keyless.py  test_live_vault.py  test_local_provider.py  test_markdown.py  test_mcp.py  test_memory_loop.py  test_memory_recency.py  test_memory_write.py  test_namu_parser.py  test_ollama_provider.py  test_onboarding_console.py  test_openai_client.py  test_operators.py  test_ported_features.py  test_qmd_stages.py  test_related.py  test_reliability.py  test_review_regressions.py  test_search.py  test_server.py  test_store.py  (+2 more)
(+57 files in other folders)
