[project]
name = "lemory"
version = "0.1.0"
description = "High-performance personal knowledge base backend for Obsidian vaults — hybrid vector + BM25 + knowledge-graph retrieval on a zero-service stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lemory" }]
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "watchdog>=4.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
mcp = ["mcp>=1.0"]

[project.scripts]
lemory = "lemory.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
