[project]
name = "lemory"
version = "0.2.0"
description = "Local memory middleware for your Markdown: your Obsidian vault becomes the memory of every AI (MCP read+write), with Korean-first hybrid retrieval, memory consolidation, and an interactive knowledge graph on a zero-service SQLite+numpy stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["obsidian", "mcp", "memory", "rag", "knowledge-base", "local-first", "markdown", "ai-memory"]
authors = [{ name = "Lemory" }]
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "watchdog>=4.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/jwgo/lemory"
Documentation = "https://github.com/jwgo/lemory/blob/main/docs/GUIDE.md"
Benchmarks = "https://github.com/jwgo/lemory/blob/main/BENCHMARKS.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
mcp = ["mcp>=1.0"]
local = ["fastembed>=0.3"]
pdf = ["pypdf>=4.0"]

[project.scripts]
lemory = "lemory.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
