[project]
name = "lemory"
version = "0.3.0"
description = "Local memory middleware for your Markdown: your Obsidian vault becomes the memory of every AI (MCP read+write), with Korean-first hybrid retrieval, memory consolidation, and an interactive knowledge graph on a zero-service SQLite+numpy stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["obsidian", "mcp", "memory", "rag", "knowledge-base", "local-first", "markdown", "ai-memory"]
authors = [{ name = "Lemory" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Korean",
    "Natural Language :: English",
]
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "watchdog>=4.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    # semantic search works out of the box on every OS: fastembed is pure-Python
    # ONNX (prebuilt wheels for win/mac/linux, no compiler, no API key). Without
    # it a fresh install would fall back to lexical-only (BM25 + link graph).
    "fastembed>=0.3",
]

[project.urls]
Homepage = "https://github.com/jwgo/lemory"
Documentation = "https://github.com/jwgo/lemory/blob/main/docs/GUIDE.md"
Benchmarks = "https://github.com/jwgo/lemory/blob/main/BENCHMARKS.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
mcp = ["mcp>=1.0"]
local = []  # fastembed is now a base dependency; kept so `lemory[local]` still resolves
# one llama.cpp engine powers all three local models — embeddings (Harrier),
# reranker (Qwen3-Reranker), and answers (Gemma 4) — on Metal/CUDA/Vulkan/CPU.
llama = ["llama-cpp-python>=0.3", "huggingface-hub>=0.23"]
# voice for the console assistant: on-device TTS + STT (the answer brain is llama)
assistant = ["supertonic>=1.3", "faster-whisper>=1.1", "librosa>=0.10", "soundfile>=0.12", "huggingface-hub>=0.23"]
pdf = ["pypdf>=4.0"]

[project.scripts]
lemory = "lemory.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemory"]

# Keep the sdist lean: ship the package, docs, and tests — NOT the ~20MB
# benchmark corpora, the Obsidian plugin's node_modules, or doc image assets.
[tool.hatch.build.targets.sdist]
only-include = ["src/lemory", "tests", "README.md", "README.ko.md",
                "CHANGELOG.md", "LICENSE", "pyproject.toml",
                "docs/GUIDE.md", "docs/GUIDE.ko.md", "BENCHMARKS.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
